Fixed bug where sidebar would be wrapped on next line.

--- a/css/style.scss
+++ b/css/style.scss
@@ -194,6 +194,7 @@ article.featured {
 section#articles {
   clear: both;
   float: left;
+  width: $article-width;
 }
 
 #sidebar {
